--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nx/js": "20.3.1",
     "@nx/playwright": "20.3.1",
     "@nx/react-native": "20.3.1",
+    "@nx/rollup": "20.3.1",
     "@nx/vite": "20.3.1",
     "@nx/web": "20.3.1",
     "@nx/workspace": "20.3.1",
@@ -54,6 +55,7 @@
     "react-native-svg-web": "~1.0.9",
     "react-native-web": "~0.19.13",
     "react-test-renderer": "~18.3.1",
+    "rollup": "^4.14.0",
     "tslib": "^2.3.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
