--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@happynrwl/shared-ui-layout": ["libs/shared-ui-layout/src/index.ts"],
+      "@happynrwl/ui-components": ["libs/shared-ui-layout/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
