feat: added relase

--- a/nx.json
+++ b/nx.json
@@ -62,5 +62,12 @@
     "e2e-ci--**/*": {
       "dependsOn": ["^build"]
     }
+  },
+   "release": {
+    "changelog": {
+      "workspaceChangelog": {
+        "createRelease": "github"
+      }
+    }
   }
 }
