--- a/libs/shared-ui-layout/package.json
+++ b/libs/shared-ui-layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@happynrwl/ui-components",
-  "version": "0.1.0",
+  "version": "2.0.0-0",
   "peerDependencies": {
     "react": "~18.3.1",
     "react-native": "~0.76.3"
