--- a/nx.json
+++ b/nx.json
@@ -63,10 +63,27 @@
       "dependsOn": ["^build"]
     }
   },
-   "release": {
+  "release": {
     "changelog": {
       "workspaceChangelog": {
         "createRelease": "github"
+      }
+    }
+  },
+  "generators": {
+    "@nx/react": {
+      "application": {
+        "babel": true,
+        "style": "tailwind",
+        "linter": "eslint",
+        "bundler": "vite"
+      },
+      "component": {
+        "style": "tailwind"
+      },
+      "library": {
+        "style": "tailwind",
+        "linter": "eslint"
       }
     }
   }
