--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,10 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@happynrwl/shared-ui-layout": ["libs/shared-ui-layout/src/index.ts"],
-      "@happynrwl/ui-components": ["libs/shared-ui-layout/src/index.ts"]
-    }
+    "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
 }
