--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   "dependencies": {
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
-    "react-native": "~0.76.3"
+    "react-native": "~0.76.3",
+    "react-router-dom": "6.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@changesets/cli": "^2.27.11",
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "20.3.1",
     "@nx/eslint": "20.3.1",
     "@nx/eslint-plugin": "20.3.1",
-    "@nx/js": "20.3.1",
+    "@nx/js": "^20.3.1",
     "@nx/playwright": "20.3.1",
+    "@nx/react": "20.3.1",
     "@nx/react-native": "20.3.1",
     "@nx/rollup": "20.3.1",
     "@nx/vite": "20.3.1",
@@ -30,15 +33,19 @@
     "@react-native/babel-preset": "~0.76.3",
     "@react-native/metro-config": "~0.76.3",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/jest-native": "~5.4.3",
+    "@testing-library/react": "15.0.6",
     "@testing-library/react-native": "~12.9.0",
     "@types/node": "18.16.9",
     "@types/react": "~18.3.12",
     "@types/react-dom": "~18.3.1",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
+    "autoprefixer": "10.4.13",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
@@ -49,6 +56,7 @@
     "jest-react-native": "18.0.0",
     "jsdom": "~22.1.0",
     "nx": "20.3.1",
+    "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "react-native-svg": "~15.8.0",
     "react-native-svg-transformer": "~1.5.0",
@@ -56,10 +64,12 @@
     "react-native-web": "~0.19.13",
     "react-test-renderer": "~18.3.1",
     "rollup": "^4.14.0",
+    "tailwindcss": "3.4.3",
     "tslib": "^2.3.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
     "vite": "^5.0.0",
     "vitest": "^1.3.1"
-  }
+  },
+  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
