--- a/.github/workflows/manual-release-please.yml
+++ b/.github/workflows/manual-release-please.yml
@@ -40,21 +40,20 @@ jobs:
       #     else
       #       echo "target=${{ github.event.inputs.branch }}" >> $GITHUB_OUTPUT
       #     fi
-      - name: Release Please
-        uses: google-github-actions/release-please-action@v3
-        with:
-          release-type: node  # Replace with your project's release type
-          separate-pull-requests: true
-          changelog-types: true
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Trigger Release Please
-      #   uses: googleapis/release-please-action@v4
+      # - name: Release Please
+      #   uses: google-github-actions/release-please-action@v3
       #   with:
-      #     token: '${{ secrets.GITHUB_TOKEN }}'
-      #     release-type: 'node'
+      #     release-type: node  # Replace with your project's release type
       #     separate-pull-requests: true
-      #     target-branch: '${{ github.ref_name }}'
+      #     changelog-types: true
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Trigger Release Please
+        uses: googleapis/release-please-action@v4
+        with:
+          token: '${{ secrets.GITHUB_TOKEN }}'
+          release-type: simple
+          target-branch: '${{ github.event.inputs.branch }}'
 
       - name: Print Release Information
         run: |
